# one-agent

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_AUDIT_REPORT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  TUTORIAL.md  __main__.py  athena.py  auth.db  docker-compose.yml  install  install.sh  integration_test.py  one_agent.py  pyproject.toml  requirements.txt  tasks.db  test-results.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-flutter-apk.yml  ci.yml
active_learning/: __init__.py
agent_templates/: __init__.py
alerting/: __init__.py
analytics/: __init__.py
api/: __init__.py  dashboard.py
auth/: __init__.py
automl/: __init__.py
backup/: __init__.py
code_interpreter/: __init__.py
config/: default_config.yaml  dev_config.yaml  prod_config.yaml  staging_config.yaml  test_config.yaml
config_backup/: __init__.py
core/: __init__.py  agent.py  agent_mesh.py  alerting.py  approval.py  audit_log.py  backoff.py  backup_export.py  batch.py  chart_gen.py  circuit_breaker.py  context.py  context_compressor.py  conv_branch.py  coordinator.py  coordinator_features.py  coordinator_helpers.py  coordinator_intelligence.py  coordinator_tasks.py  db.py  deep_research.py  eval.py  events.py  exceptions.py  failure_recovery.py  log_sanitizer.py  metacognition.py  model_compare.py  module_autoloader.py  module_registry.py  offline_queue.py  plugin.py  rag_advanced.py  rate_limiter.py  reasoning.py  roles.py  safety.py  security.py  self_improve.py  sentiment.py  (+12 more)
data/marketplace/: registry.json
data/memory/: docs.db  improvements.db  kg.db  longterm.sqlite-shm  longterm.sqlite-wal  sessions.db
data/roles/: prompts-zh.json
data_lineage/: __init__.py
document_intelligence/: __init__.py
examples/: quickstart.py  session_history.py
executors/: __init__.py  base.py  python_runner.py  system.py
export/: __init__.py
fine_tune/: __init__.py
flutter_client/one_agent_client/: .gitignore  pubspec.yaml
flutter_client/one_agent_client/.gitee/workflows/: build-apk.yml
flutter_client/one_agent_client/.github/workflows/: build-apk.yml
flutter_client/one_agent_client/android/: build.gradle  one-agent-release.keystore  settings.gradle
flutter_client/one_agent_client/android/app/: build.gradle  proguard-rules.pro
flutter_client/one_agent_client/lib/: main.dart
flutter_client/one_agent_client/lib/api/: api_client.dart  approval_api.dart  chat_api.dart  memory_api.dart  role_api.dart  session_api.dart  skill_api.dart  sse_client.dart  system_api.dart  update_api.dart
flutter_client/one_agent_client/lib/l10n/: app_localizations.dart
flutter_client/one_agent_client/lib/models/: approval.dart  approval.freezed.dart  approval.g.dart  chat_message.dart  (+17 more)
flutter_client/one_agent_client/lib_backup/: main.dart
gateways/: __init__.py  index.html  messaging.py  wechat_personal.py
i18n/: __init__.py
kg_visualizer/: __init__.py
marketplace/: __init__.py
memory/: __init__.py  base_store.py  connection_pool.py  dialog_summary.py  embeddings.py  knowledge_graph.py  role_store.py  session_store.py  user_profile.py
models/: __init__.py  cache.py  capabilities.py  catalog.py  cost_tracker.py  recommend.py  resolver.py  semantic_cache.py  tiers.py
monitor/: __init__.py  health.py  prometheus.py  tracing.py
multi_agent/: __init__.py
multimodal/: __init__.py
nginx/: nginx.conf
performance/: __init__.py
plugin_sdk/: __init__.py
prompt_studio/: __init__.py
prompt_templates/: __init__.py
rag/: __init__.py
recommender/: __init__.py
router/: __init__.py
scheduler/: __init__.py
scripts/: fetch_models.py  sync_pull.sh  sync_push.sh
security/: __init__.py
skills/: __init__.py  calendar.py  database.py  document_search.py  email.py  mcp_client.py  mcp_server.py  openapi.py  schema_gen.py  updater.py  wechat_login.py
smart_contract/: __init__.py
spatial_3d/: __init__.py
tasks/: __init__.py
tests/: benchmark_test.py  conftest.py  e2e_test.py  integration_test.py  smoke.py  test_advanced_intelligence.py  test_alerting.py  test_audit_round10_v67_fixes.py  test_audit_round11_v68_intelligence.py  test_audit_round7_fixes.py  test_audit_round8_empty_tool_name.py  test_audit_round9_web_search.py  test_audit_round9b_web_fetch.py  test_compress_edge.py  test_coordinator_paths.py  test_deep_review_fixes.py  test_deep_review_fixes2.py  test_deep_review_fixes3.py  test_e2e_real.py  test_executor_events.py  test_gateways_messaging.py  test_infrastructure.py  test_intelligence.py  test_marketplace.py  test_mock_integration.py  test_monitor.py  test_new_features.py  test_observability.py  test_performance.py  test_scheduler.py  test_skillweaver_deep.py  test_streaming_tool_calls.py  test_tier_fallback.py  test_v60_fixes.py  test_v62_fixes.py  unit_tests.py
utils/: intent_classifier.py
ux/: __init__.py
webhooks/: __init__.py
ws/: __init__.py
(+38 files in other folders)
