[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "one-agent"
version = "0.1.0"
description = "One-Agent: Universal AI agent with multi-gateway, multi-model support"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pyyaml>=6.0.1",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
web = ["fastapi>=0.110.0", "uvicorn[standard]>=0.27.0"]
scheduler = ["APScheduler>=3.10.4"]
crypto = ["cryptography>=41.0.0"]
wechat = ["itchat-uos"]
full = [
    "httpx>=0.27.0",
    "pyyaml>=6.0.1",
    "pydantic>=2.5.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "APScheduler>=3.10.4",
    "cryptography>=41.0.0",
]

[project.scripts]
one-agent = "one_agent:cli"
one = "one_agent:cli"

[tool.setuptools]
py-modules = ["one_agent"]
packages = ["core", "gateways", "executors", "models", "memory", "skills", "router", "api", "monitor", "scheduler", "multimodal", "marketplace", "alerting", "config_backup", "i18n", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
python_files = ["*_test.py", "test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]