[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "one-agent"
version = "2.0.0"
description = "One-Agent: Universal AI agent with multi-gateway, multi-model support"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0,<1.0",
    "pyyaml>=6.0.1,<7.0",
    "pydantic>=2.5.0,<3.0",
    # fastapi/uvicorn/APScheduler/cryptography 之前在 optional [web]/[scheduler]/
    # [crypto] 下，但 requirements.txt 把它们当必装，且 REST API / Web UI /
    # 调度器 / 加密是项目核心功能。移到核心依赖让 `pip install .` 后即可
    # 用全部功能，与 requirements.txt 保持单一来源一致。
    "fastapi>=0.110.0,<1.0",
    "uvicorn[standard]>=0.27.0,<1.0",
    "APScheduler>=3.10.4,<4.0",
    "cryptography>=41.0.0,<46.0",
    # qrcode: 在终端直接显示微信登录二维码 ASCII 图，
    # 避免依赖浏览器打开 liteapp.weixin.qq.com HTML 页面
    # （某些网络环境加载 JS CDN 会"网络错误"）
    "qrcode>=7.4,<8.0",
]

[project.optional-dependencies]
wechat = ["itchat-uos"]
test = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23.0,<1.0",
    "pytest-cov>=4.0,<7.0",
]
full = [
    # full 现在等价于核心依赖 + wechat + test
    "itchat-uos",
]

[project.scripts]
one-agent = "one_agent:cli"
one = "one_agent:cli"

[tool.setuptools]
py-modules = ["one_agent"]
packages = ["core", "gateways", "executors", "models", "memory", "skills", "router", "api", "monitor", "scheduler", "multimodal", "marketplace", "alerting", "config_backup", "i18n"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
python_files = ["*_test.py", "test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["data", "logs", "marketplace", "config_backup"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function call in default argument (common in FastAPI)
    "B904",  # raise from in except (too many existing cases)
    "UP007", # Optional[X] -> X | None (keep Optional for pydantic compatibility)
    "UP035", # typing.Dict -> dict (keep for now, gradual migration)
    "UP006", # typing.List -> list (keep for pydantic compatibility)
    "UP045", # Optional[X] -> X | None (keep for pydantic compatibility)
    "UP037", # quoted annotation (keep for forward refs)
]

[tool.ruff.lint.isort]
known-first-party = ["core", "gateways", "executors", "models", "memory", "skills", "router", "api", "monitor", "scheduler", "multimodal", "marketplace", "alerting", "i18n"]
known-third-party = ["fastapi", "pydantic", "yaml", "httpx", "pytest"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"